# ecsim

./: .gitignore  README.md  constants.py  main.py  objects.py  pyproject.toml  ruff.toml  simulation.py  visualization.py  visualizer.py  window.py
resources/style/: custom_dark.mplstyle
src/ecsim/: main.py
src/ecsim/config/: __init__.py  params.py
src/ecsim/render/: __init__.py  statistics.py  visualization.py  window.py
src/ecsim/simulation/: __init__.py  objects.py  simulation.py
src/ecsim/systems/: genome.py
